--- a/index.html
+++ b/index.html
@@ -1,51 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/60c0b4925e.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
 
   <!-- 1st section -->
 <div> 
-    <h1>Hello, I'm Hugo 😎</h1>
+    <h1>Salut, je m'appelle Hugo 😉</h1>
+
   
     <img src="images/sylvain.jpg" alt="" width="100">
     <p>
-    I love Github, UX/UI Design, web-development and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs and creative people around the world 🌍.
+    Je suis étudiant à Kedge et suis passionné de sport, de cinéma et de voiture. J'apprends a coder pour pouvoir créer des interfaces de sites.
     </p>
-    <a href="#" class="button-blue">Discover Le Wagon</a>
+    <a href="https://www.psg.fr/" target="_blank" class="button-blue">Le club de ma ville</a>
 </div>
 
    
 <div>
   <link rel="stylesheet" href="style.css">
-  <h2>UX/UI Design 📐</h2>
-  <p>I am passionate about <strong>UX/UI Design.</strong></p>
+  <h2>Football ⚽</h2> 
+  <p>Je suis passionné par le <strong>Football.</strong></p>
 </div>
 
 <div>
-  <h2>Frontend Development 💻</h2>
-  <p>I am passionate about <strong>Frontend Development.</strong></p>
+  <h2>Cinéma 📽️</h2>
+  <p>Je suis passionné par le <strong>Cinéma.</strong></p>
 </div>
 
 <div>
-  <h2>Motorbikes 🏍️</h2>
-  <p>I am passionate about <strong>Motorbikes.</strong></p>
+  <h2>Voitures 🚗</h2>
+  <p>Je suis passionné par les <strong>Voitures.</strong></p>
 </div>
 
 <div>
-  <h2>Follow me</h2>
+  <h2>Suivez-moi</h2>
   <ul id="list-inline"> 
     <li>
-      <a href="#">
-        <i class="fab fa-github-square"></i>
+      <a href="https://www.facebook.com/hugo.milin" target="_blank">
+        <i class="fab fa-facebook"></i></i>
       </a>
     </li>
     <li>
-      <a href="#">
-        <i class="fab fa-twitter-square"></i>
+      <a href="https://www.instagram.com/hugomilin/?hl=fr" target="_blank">
+        <i class="fab fa-instagram-square"></i>
       </a>
     </li>
     <li>
-      <a href="#">
-        <i class="fab fa-medium"></i>
+      <a href="https://www.linkedin.com/in/hugo-milin-2649ba128/" target="_blank">
+        <i class="fab fa-linkedin"></i>
       </a>
-    </li>
   </ul>
 </div>
 </body>
+</html>
